parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@generator_expressions.py-6.snap
---
source: parser/src/parser/parser.rs
description: "(x*y for x in range(10) for y in range(10) if x*y > 10)\n"
input_file: parser/test_data/inputs/one_liners/generator_expressions.py
---
Module {
    node: Node {
        start: 0,
        end: 56,
    },
    body: [
        ExpressionStatement(
            Generator(
                Generator {
                    node: Node {
                        start: 0,
                        end: 55,
                    },
                    element: BinOp(
                        BinOp {
                            node: Node {
                                start: 1,
                                end: 4,
                            },
                            op: Mult,
                            left: Name(
                                Name {
                                    node: Node {
                                        start: 1,
                                        end: 2,
                                    },
                                    id: "x",
                                },
                            ),
                            right: Name(
                                Name {
                                    node: Node {
                                        start: 3,
                                        end: 4,
                                    },
                                    id: "y",
                                },
                            ),
                        },
                    ),
                    generators: [
                        Comprehension {
                            node: Node {
                                start: 5,
                                end: 23,
                            },
                            target: Name(
                                Name {
                                    node: Node {
                                        start: 9,
                                        end: 10,
                                    },
                                    id: "x",
                                },
                            ),
                            iter: Call(
                                Call {
                                    node: Node {
                                        start: 14,
                                        end: 23,
                                    },
                                    func: Name(
                                        Name {
                                            node: Node {
                                                start: 14,
                                                end: 19,
                                            },
                                            id: "range",
                                        },
                                    ),
                                    args: [
                                        Constant(
                                            Constant {
                                                node: Node {
                                                    start: 20,
                                                    end: 22,
                                                },
                                                value: 10,
                                            },
                                        ),
                                    ],
                                    keywords: [],
                                    starargs: None,
                                    kwargs: None,
                                },
                            ),
                            ifs: [],
                            is_async: false,
                        },
                        Comprehension {
                            node: Node {
                                start: 24,
                                end: 54,
                            },
                            target: Name(
                                Name {
                                    node: Node {
                                        start: 28,
                                        end: 29,
                                    },
                                    id: "y",
                                },
                            ),
                            iter: Call(
                                Call {
                                    node: Node {
                                        start: 33,
                                        end: 42,
                                    },
                                    func: Name(
                                        Name {
                                            node: Node {
                                                start: 33,
                                                end: 38,
                                            },
                                            id: "range",
                                        },
                                    ),
                                    args: [
                                        Constant(
                                            Constant {
                                                node: Node {
                                                    start: 39,
                                                    end: 41,
                                                },
                                                value: 10,
                                            },
                                        ),
                                    ],
                                    keywords: [],
                                    starargs: None,
                                    kwargs: None,
                                },
                            ),
                            ifs: [
                                Compare(
                                    Compare {
                                        node: Node {
                                            start: 46,
                                            end: 54,
                                        },
                                        left: BinOp(
                                            BinOp {
                                                node: Node {
                                                    start: 46,
                                                    end: 49,
                                                },
                                                op: Mult,
                                                left: Name(
                                                    Name {
                                                        node: Node {
                                                            start: 46,
                                                            end: 47,
                                                        },
                                                        id: "x",
                                                    },
                                                ),
                                                right: Name(
                                                    Name {
                                                        node: Node {
                                                            start: 48,
                                                            end: 49,
                                                        },
                                                        id: "y",
                                                    },
                                                ),
                                            },
                                        ),
                                        ops: [
                                            Gt,
                                        ],
                                        comparators: [
                                            Constant(
                                                Constant {
                                                    node: Node {
                                                        start: 52,
                                                        end: 54,
                                                    },
                                                    value: 10,
                                                },
                                            ),
                                        ],
                                    },
                                ),
                            ],
                            is_async: false,
                        },
                    ],
                },
            ),
        ),
    ],
}
