parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@lists.py-2.snap
---
source: parser/src/parser/parser.rs
description: "[a,\nb, c],"
input_file: parser/test_data/inputs/one_liners/lists.py
---
Module {
    node: Node {
        start: 0,
        end: 10,
    },
    body: [
        ExpressionStatement(
            Tuple(
                Tuple {
                    node: Node {
                        start: 0,
                        end: 10,
                    },
                    elements: [
                        List(
                            List {
                                node: Node {
                                    start: 0,
                                    end: 9,
                                },
                                elements: [
                                    Name(
                                        Name {
                                            node: Node {
                                                start: 1,
                                                end: 2,
                                            },
                                            id: "a",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            node: Node {
                                                start: 4,
                                                end: 5,
                                            },
                                            id: "b",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            node: Node {
                                                start: 7,
                                                end: 8,
                                            },
                                            id: "c",
                                        },
                                    ),
                                ],
                            },
                        ),
                    ],
                },
            ),
        ),
    ],
}
