parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@lists.py-3.snap
---
source: parser/src/parser/parser.rs
description: "[a\n, b, c],"
input_file: parser/test_data/inputs/one_liners/lists.py
---
Module {
    node: Node {
        start: 0,
        end: 11,
    },
    body: [
        ExpressionStatement(
            Tuple(
                Tuple {
                    node: Node {
                        start: 0,
                        end: 11,
                    },
                    elements: [
                        List(
                            List {
                                node: Node {
                                    start: 0,
                                    end: 10,
                                },
                                elements: [
                                    Name(
                                        Name {
                                            node: Node {
                                                start: 1,
                                                end: 3,
                                            },
                                            id: "a",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            node: Node {
                                                start: 5,
                                                end: 6,
                                            },
                                            id: "b",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            node: Node {
                                                start: 8,
                                                end: 9,
                                            },
                                            id: "c",
                                        },
                                    ),
                                ],
                            },
                        ),
                    ],
                },
            ),
        ),
    ],
}
