parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@lists.py-5.snap
---
source: parser/src/parser/parser.rs
description: "[a,\n],"
input_file: parser/test_data/inputs/one_liners/lists.py
---
Module {
    node: Node {
        start: 0,
        end: 6,
    },
    body: [
        ExpressionStatement(
            Tuple(
                Tuple {
                    node: Node {
                        start: 0,
                        end: 6,
                    },
                    elements: [
                        List(
                            List {
                                node: Node {
                                    start: 0,
                                    end: 5,
                                },
                                elements: [
                                    Name(
                                        Name {
                                            node: Node {
                                                start: 1,
                                                end: 2,
                                            },
                                            id: "a",
                                        },
                                    ),
                                ],
                            },
                        ),
                    ],
                },
            ),
        ),
    ],
}
